refactored to useContext & useReducer

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "demo",
-  "home": "https://Panton1986.github.io/react_e-commerce",
+  "homepage": "https://Panton1986.github.io/react_e-commerce",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
